# raytracer

./: .gitignore  CMakeLists.txt
raytracer/raytracer.xcodeproj/: project.pbxproj
raytracer/raytracer.xcodeproj/project.xcworkspace/xcuserdata/littlefrog.xcuserdatad/: UserInterfaceState.xcuserstate
raytracer/raytracer/src/brdf/: lambertian.h
raytracer/raytracer/src/core/: camera.h  light.h  ray.h  sampler.h  world.cpp  world.h
raytracer/raytracer/src/geometry/: function2d.h  plane.cpp  rectangle.cpp  rectangle.h  sphere.cpp  sphere.h
raytracer/raytracer/src/light/: pointlight.h
raytracer/raytracer/src/material/: emissive.cpp  emissive.h  matte.h
raytracer/raytracer/src/sampler/: jittered.h  multijittered.cpp  purerandom.h
raytracer/raytracer/src/tracer/: multipleobjects.cpp  multipleobjects.h
src/: main.cpp
src/brdf/: glossyspecular.cpp  glossyspecular.h  lambertian.cpp  lambertian.h  perfectspecular.cpp  perfectspecular.h  specular.cpp  specular.h
src/bsdf/: fresnelreflector.cpp  fresnelreflector.h  fresneltransmitter.cpp  fresneltransmitter.h  lambertian.cpp  lambertian.h  perfectspecular.cpp  perfectspecular.h  perfecttransmitter.cpp  perfecttransmitter.h  separable.cpp  separable.h  specular.cpp  specular.h  svbsdf.h  tabulated.cpp  tabulated.h
src/camera/: pinhole.cpp  pinhole.h  thinlens.cpp  thinlens.h
src/core/: brdf.h  bssrdf.cpp  bssrdf.h  btdf.h  camera.cpp  camera.h  geometry.cpp  geometry.h  light.h  material.h  ray.h  sampler.cpp  sampler.h  scene.cpp  shade.h  tracer.cpp  tracer.h  viewplane.cpp  viewplane.h  world.cpp  world.h
src/geometry/: bound.h  boundingbox.cpp  boundingbox.h  box.cpp  box.h  disk.cpp  disk.h  function2d.cpp  function2d.h  instance.cpp  instance.h  plane.cpp  plane.h  rectangle.cpp  sphere.cpp  sphere.h  torus.cpp  torus.h  triangle.cpp  triangle.h
src/geometry/bound/: bound.h  boundingbox.cpp  boundingbox.h
src/geometry/compound/: beveledcylinder.cpp  beveledcylinder.h  compound.cpp  compound.h  grid.cpp  grid.h  solidcylinder.cpp  solidcylinder.h
src/geometry/model/: mesh.h  meshtriangle.cpp  meshtriangle.h  model.cpp  model.h  smoothmeshtriangle.cpp  smoothmeshtriangle.h  svmodel.cpp  svmodel.h
src/geometry/part/: partsphere.cpp  partsphere.h  parttorus.cpp  parttorus.h
src/geometry/primitive/: box.cpp  disk.cpp  disk.h  opencylinder.cpp  opencylinder.h  plane.cpp  rectangle.cpp  rectangle.h  sphere.cpp  sphere.h  torus.cpp  torus.h  triangle.cpp  triangle.h
src/headers/: equations.cpp  utilities.h
src/light/: ambient.h  ambientoccluder.cpp  ambientoccluder.h  arealight.cpp  arealight.h  pointlight.cpp  pointlight.h
src/material/: dielectric.cpp  dielectric.h  emissive.cpp  emissive.h  glossyreflector.cpp  glossyreflector.h  matte.cpp  matte.h  phong.cpp  phong.h  reflective.cpp  reflective.h  subsurface.cpp  subsurface.h  svmaterial.cpp  svmaterial.h  transparent.cpp  transparent.h
src/material/texture/: image.cpp  image.h  imagetexture.cpp  imagetexture.h  texture.cpp  texture.h
src/photon/: photon.h  photonmap.cpp  photonmap.h  photontracer.cpp  photontracer.h
src/sampler/: jittered.cpp  jittered.h  multijittered.cpp  multijittered.h  nrooks.cpp  nrooks.h  purerandom.cpp  purerandom.h  regular.cpp  regular.h
src/tracer/: arealighttracer.cpp  arealighttracer.h  globaltracer.cpp  globaltracer.h  multipleobjects.cpp  multipleobjects.h  raycast.cpp  raycast.h  singlesphere.cpp  singlesphere.h  whitted.cpp  whitted.h
src/utilities/: debug.h  interpolation.cpp  utilities.h
